...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pocketpaint_layer_side_nav_menu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/pocketpaint_layer_side_nav_button_add"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/layer_new"
        app:srcCompat="@drawable/ic_pocketpaint_layers_add_selector" />

    <ImageButton
        android:id="@+id/pocketpaint_layer_side_nav_button_delete"
        style="?borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/pocketpaint_layer_side_nav_button_add"
        android:contentDescription="@string/layer_delete"
        app:srcCompat="@drawable/ic_pocketpaint_layers_delete_selector" />
...
