<?xml version="1.0" encoding="utf-8"?><!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2015 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pocketpaint_action_tools"
        android:icon="@drawable/pocketpaint_logo_small_outline"
        android:title="@string/bottom_navigation_tools" />

    <item
        android:id="@+id/pocketpaint_action_current_tool"
        android:icon="@drawable/ic_pocketpaint_tool_hand"
        android:title="@string/bottom_navigation_current" />

    <item
        android:id="@+id/pocketpaint_action_color_picker"
        android:icon="@drawable/ic_pocketpaint_tool_hand"
        android:title="@string/bottom_navigation_color" />

    <item
        android:id="@+id/pocketpaint_action_layers"
        android:icon="@drawable/ic_pocketpaint_layers"
        android:title="@string/bottom_navigation_layers" />
</menu>
