...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/pocketpaint_layout_top_bar" />
        </RelativeLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/pocketpaint_nav_view_layer"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center">

            <include layout="@layout/pocketpaint_layout_main_menu_layer" />
        </android.support.design.widget.NavigationView>
...
